--- a/u_sub_code.ipynb
+++ b/u_sub_code.ipynb
@@ -21,11 +21,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
-        "id": "PwCOV2qkYon6"
+        "id": "PwCOV2qkYon6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        },
+        "outputId": "9dfcc853-ceef-4cd1-8e92-2dcfea6c3de8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-39-7b10aab92c92>\u001b[0m in \u001b[0;36m<cell line: 541>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    549\u001b[0m                                  special_cases: {}}\n\u001b[1;32m    550\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 551\u001b[0;31m     \u001b[0mdata_generation_functions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_weights\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata_generation_functions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    552\u001b[0m     \u001b[0mbatch_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter the number of batches: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    553\u001b[0m     \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter the batch size: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-39-7b10aab92c92>\u001b[0m in \u001b[0;36minput_weights\u001b[0;34m(data_generation_functions)\u001b[0m\n\u001b[1;32m    487\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0minput_weights\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata_generation_functions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    488\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 489\u001b[0;31m         \u001b[0mdefault\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"---\\nDo you want to use the default function weights?\\nYes or No: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"yes\"\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    490\u001b[0m         default_weights = {linear_composite_functions: 0.15,\n\u001b[1;32m    491\u001b[0m                           \u001b[0mpolynomial_composite_functions\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m0.15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    849\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m             )\n\u001b[0;32m--> 851\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ],
       "source": [
         "import random, csv, os, time, re\n",
         "import sympy as sp\n",
@@ -713,9 +733,9 @@
         "from datasets import load_dataset\n",
         "import torch\n",
         "\n",
-        "checkpoint = \"t5-base\"\n",
+        "checkpoint = \"AryaR-06/t5-u-sub\"\n",
         "tokenizer = T5Tokenizer.from_pretrained(checkpoint)\n",
-        "model = T5ForConditionalGeneration.from_pretrained(\"/content/drive/MyDrive/u_sub/t5-u-sub\")\n",
+        "model = T5ForConditionalGeneration.from_pretrained(checkpoint)\n",
         "\n",
         "data_files = {\"validation\": \"/content/drive/MyDrive/u_sub/validation.csv\"}\n",
         "dataset = load_dataset(\"csv\", data_files=data_files)\n",
@@ -790,11 +810,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "7ZbKLykc8tA5"
+        "id": "7ZbKLykc8tA5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a05a021-94d3-429a-e150-4ed539ed486b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an expression to integrate by substitution: sin(5*x)\n",
+            "(1)  ∫(sin(5*x))*dx\n",
+            "-------------------\n",
+            "(2)  Let: u = 5*x\n",
+            "(3)  du = (5)*dx\n",
+            "(4)  dx = du/(5)\n",
+            "-------------------\n",
+            "(5)  ∫(sin(u)/5)*du\n"
+          ]
+        }
+      ],
       "source": [
         "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
         "import torch\n",
@@ -802,9 +841,9 @@
         "import sympy as sp\n",
         "\n",
         "def generate_u_sub (expression):\n",
-        "    checkpoint = \"t5-base\"\n",
+        "    checkpoint = \"AryaR-06/t5-u-sub\"\n",
         "    tokenizer = T5Tokenizer.from_pretrained(checkpoint)\n",
-        "    model = T5ForConditionalGeneration.from_pretrained(\"/content/drive/MyDrive/u_sub/t5-u-sub\")\n",
+        "    model = T5ForConditionalGeneration.from_pretrained(checkpoint)\n",
         "\n",
         "    model.eval()\n",
         "\n",
@@ -817,6 +856,7 @@
         "                                  num_beams=4)\n",
         "\n",
         "        prediction = tokenizer.decode(output[0], skip_special_tokens=True)\n",
+        "\n",
         "        return prediction\n",
         "\n",
         "def expr_tree_len(expr, max_depth=0, cur_depth=0):\n",
@@ -938,7 +978,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1gATDfR4BnmlrPw8oo47MZX675R2plah3",
-      "authorship_tag": "ABX9TyOhA6vJi2pCXjm/2tktMRSD",
+      "authorship_tag": "ABX9TyO6YpaChzkpJSZiaNeiklvP",
       "include_colab_link": true
     },
     "kernelspec": {
